Responsividade do card

--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -40,68 +40,48 @@
         </div>
     </div>
 
+<!--    <div class="card-max">-->
+<!--        <div class="card">-->
+<!--            <div class="card-img">-->
+<!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
+<!--            </div>-->
+<!--            <h1 id="card-title1">Alça Vazada</h1>-->
+<!--            <div class="card-button">-->
+<!--                <button type="button" class="btn btn-primary">Primary</button>-->
+<!--            </div>-->
 
-    <div class="container">
+<!--        </div>-->
 
-        <!--        <div class="row">-->
-        <!--            <div class="col-6">-->
-        <div class="cardMax">
-            <div class="card"> <!--style="width: 18rem;"-->
-                <img th:src="@{/imagens/alca-vazada.jpg}" class="card-img-top" alt="foi?">
+<!--        <div class="card">-->
+<!--            <div class="card-img">-->
+<!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
+<!--            </div>-->
+<!--            <h1 id="card-title2">Alça Vazada</h1>-->
+<!--            <div class="card-button">-->
+<!--                <button type="button" class="btn btn-primary">Primary</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+    <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Alça Vazada Fosca</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
-
-            <!--                    <div class="col-6">-->
-            <div class="card"> <!--style="width: 18rem;"-->
-                <img th:src="@{/imagens/alca-vazada.jpg}" class="card-img-top" alt="foi?">
-                <div class="card-body">
-                    <h5 class="card-title">Alça Vazada Brilho</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the
-                        bulk
-                        of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <!--                    </div>-->
         </div>
-        <!--            </div>-->
-        <!--        </div>-->
-
-
-        <!--        <div class="row">-->
-        <div class="cardMax">
+        <div class="col-sm-6">
             <div class="card">
-                <img th:src="@{/imagens/alca-vazada.jpg}" class="card-img-top" alt="foi?">
                 <div class="card-body">
-                    <h5 class="card-title">Alça Fita</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img th:src="@{/imagens/alca-vazada.jpg}" class="card-img-top" alt="foi?">
-                <div class="card-body">
-                    <h5 class="card-title">Alça Camiseta</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
-    <!--    </div>-->
-
 
 </main>
 
