--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 @font-face {
-    font-family:"Ringtail";
+    font-family: "Ringtail";
     src: url("Ringtail-Sans Serif.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
 
-:root{
+:root {
     --cor-fundo: rgb(26, 28, 32);
     --cor-header1: rgb(245, 185, 0);
     --cor-header2: rgba(221, 141, 11, 0.91);
@@ -21,19 +22,19 @@
 
 }
 
-body{
+body {
     box-sizing: border-box;
     background-color: var(--cor-fundo);
     font-family: Arial;
 }
-.cabecalho{
+
+.cabecalho {
     background-color: black;
 }
 
-.container-fluid{
+.container-fluid {
     /*padding: 3%;*/
 }
-
 
 
 .text-center {
@@ -44,8 +45,7 @@ body{
 }
 
 
-
-.imagem{
+.imagem {
     /*border: solid white;*/
     width: 100%;
     padding: 3%;
@@ -64,44 +64,52 @@ body{
 
 
 }
-.col-12{
+
+.col-12 {
     width: 50%;
 }
 
 
-/*.main-texto-resumido {*/
-/*    color: white;*/
-/*    text-align: center;*/
+/* card: */
+
+/*.card-max {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: space-evenly;*/
+/*    margin: 10px;*/
 /*}*/
 
-.cardMax{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 10%;
+/*.card {*/
+/*    background-color: var(--cor-header1);*/
+/*    width: 20%;*/
+/*    margin: 10px;*/
 
-}
+/*}*/
 
-.card {
-    background-color: rgb(245, 185, 0);
-    border-radius: 1em;
-    border: solid white;
-}
+/*.card-img {*/
+/*    display: flex;*/
+/*    width: 80%;*/
+/*    padding-left: 18%;*/
+/*}*/
 
-.card-title{
-    font-family: "Ringtail", Times, serif;
-    color: rgb(10, 64, 163);
-}
+/*#card-title1{*/
+/*    padding: 0.5rem;*/
+/*    font-family: var(--text-card);*/
+/*    font-size: 1.2rem;*/
+/*}*/
 
-.card-text {
-    font-size: large;
-}
+/*#card-title2{*/
+/*    padding: 0.5rem;*/
+/*    font-family: var(--text-card);*/
+/*    font-size: 1.2rem;*/
+/*}*/
 
-.card-img-top{
-    width: 90%;
-    height: 100%;
-    padding: 5% 0 0 10%;
-}
+/*.card-button{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    padding: 5%;*/
+/*    width: 100%*/
+/*}*/
 
 footer {
     background-color: black;
@@ -123,11 +131,11 @@ footer {
     padding: 10px;
 }
 
-.footer-img{
+.footer-img {
     margin-bottom: 0.93rem;
 }
 
-.footer-tel{
+.footer-tel {
     margin-bottom: 0px;
 }
 
@@ -141,31 +149,33 @@ footer {
 }
 
 /*@media screen and (max-width: 750px){*/
-    /*.imagem{*/
-    /*    width: 55%;*/
-    /*    !*flex-direction: row;*!*/
-    /*}*/
+/*.imagem{*/
+/*    width: 55%;*/
+/*    !*flex-direction: row;*!*/
+/*}*/
 
-    /*.cabecalho-titulo{*/
-    /*    font-size: 1.5rem;*/
-    /*}*/
+/*.cabecalho-titulo{*/
+/*    font-size: 1.5rem;*/
+/*}*/
 
-    @media screen and (max-width: 450px){
-    .footer-icon1{
+@media screen and (max-width: 450px) {
+    .footer-icon1 {
         border: none;
     }
-        .footer-first{
-            border-left: solid white 1px;
-        }
-        #footer-endereco{
-            border-top: solid white 1px;
-            margin-top: 5%;
-            padding-top: 5%;
-        }
+
+    .footer-first {
+        border-left: solid white 1px;
     }
 
-@media screen and (max-width: 850px){
-    .card-body{
+    #footer-endereco {
+        border-top: solid white 1px;
+        margin-top: 5%;
+        padding-top: 5%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .card-body {
         display: flex;
         flex-direction: column;
     }
