Responsividade do card

--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -19,12 +19,13 @@
             </div>
             <div class="col-sm-8 col lg-8">
                 <nav class="ancora">
-                    <a href="SacolasPlasticas.html">
+                    <nav href="SacolasPlasticas.html">
                         <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
                         <a href="SacolasPapel.html">
                             <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                         </a>
                         <button type="button" class="btn btn-outline-warning">Contatos</button>
+                    </nav>
                 </nav>
             </div>
         </div>
@@ -40,28 +41,28 @@
         </div>
     </div>
 
-<!--    <div class="card-max">-->
-<!--        <div class="card">-->
-<!--            <div class="card-img">-->
-<!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
-<!--            </div>-->
-<!--            <h1 id="card-title1">Alça Vazada</h1>-->
-<!--            <div class="card-button">-->
-<!--                <button type="button" class="btn btn-primary">Primary</button>-->
-<!--            </div>-->
+    <!--    <div class="card-max">-->
+    <!--        <div class="card">-->
+    <!--            <div class="card-img">-->
+    <!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
+    <!--            </div>-->
+    <!--            <h1 id="card-title1">Alça Vazada</h1>-->
+    <!--            <div class="card-button">-->
+    <!--                <button type="button" class="btn btn-primary">Primary</button>-->
+    <!--            </div>-->
 
-<!--        </div>-->
+    <!--        </div>-->
 
-<!--        <div class="card">-->
-<!--            <div class="card-img">-->
-<!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
-<!--            </div>-->
-<!--            <h1 id="card-title2">Alça Vazada</h1>-->
-<!--            <div class="card-button">-->
-<!--                <button type="button" class="btn btn-primary">Primary</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--        <div class="card">-->
+    <!--            <div class="card-img">-->
+    <!--                <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem" alt="imagem logo">-->
+    <!--            </div>-->
+    <!--            <h1 id="card-title2">Alça Vazada</h1>-->
+    <!--            <div class="card-button">-->
+    <!--                <button type="button" class="btn btn-primary">Primary</button>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
     <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
             <div class="card">
