--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -57,10 +57,12 @@ body {
     color: var(--cor-header2);
     font-size: 1.25rem;
     padding-top: 10%;
+    padding-bottom: 5%;
     text-align: center;
     display: flex;
     justify-content: space-evenly;
     /*border: solid white;*/
+
 
 
 }
@@ -71,45 +73,39 @@ body {
 
 
 /* card: */
+.card{
+    width: 80%;
+    margin: 9%;
+}
+.card-body{
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+    background-color: var(--cor-header1);
+}
 
-/*.card-max {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    justify-content: space-evenly;*/
-/*    margin: 10px;*/
-/*}*/
+.imagem-card{
+    width: 50%;
+}
 
-/*.card {*/
-/*    background-color: var(--cor-header1);*/
-/*    width: 20%;*/
-/*    margin: 10px;*/
+.card-title{
+    font-family: var(--text-card);
+    font-size: 2.20rem;
+    color: #0069D9;
+    padding-top: 5%;
 
-/*}*/
+}
 
-/*.card-img {*/
-/*    display: flex;*/
-/*    width: 80%;*/
-/*    padding-left: 18%;*/
-/*}*/
+.card-text{
+    font-size: 20px;
+}
 
-/*#card-title1{*/
-/*    padding: 0.5rem;*/
-/*    font-family: var(--text-card);*/
-/*    font-size: 1.2rem;*/
-/*}*/
+.btn-primary{
+}
 
-/*#card-title2{*/
-/*    padding: 0.5rem;*/
-/*    font-family: var(--text-card);*/
-/*    font-size: 1.2rem;*/
-/*}*/
 
-/*.card-button{*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    padding: 5%;*/
-/*    width: 100%*/
-/*}*/
+
+
 
 footer {
     background-color: black;
@@ -179,6 +175,26 @@ footer {
         display: flex;
         flex-direction: column;
     }
+}
+
+/*TABELA MASSA*/
+
+.tabela-max{
+    color: white;
+}
+
+.tabela-head1{
+    background-color: green;
+    border: solid   white;
+}
+
+.tabela-head2{
+    background-color: gray;
+    border: solid   white;
+}
+
+td{
+    border: solid   white;
 }
 
 
