--- a/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
+++ b/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
@@ -1,15 +1,14 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Orçamento Boca Vazada</title>
     <link rel="stylesheet" href="style.css">
-    <title>Litoral Brindes</title>
 </head>
 <body>
-
 <header class="cabecalho">
 
     <div class="container-fluid">
@@ -41,59 +40,42 @@
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card">
-                    <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
-                        <h5 class="card-title">Boca Vazada Fosca </h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/bocaVazadaFoscaOrcamento" class="btn btn-primary">Veja Orçamento</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
-                        <h5 class="card-title">Boca Vazada Brilho</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <table class="tabela-max">
+        <tr class="tabela-head1" ola>
+            <th>Tabela de Sacolas</th>
+        </tr>
+        <tr class="tabela-head2">
+            <th>Boca Vazada (HD) Alta Densidade (Fosca)</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>Valor para 500 Sacolas</td>
+            <td>Valor para 1000 Sacolas</td>
+        </tr>
+        <tr>
+            <td>a</td>
+            <td>b</td>
+            <td>c</td>
+            <td>d</td>
+        </tr>
+        <tr>
+
+        </tr>
+        <tr>
+
+        </tr>
+        <tr>
+
+        </tr>
+        <tr>
+
+        </tr>
+    </table>
 
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card">
-                    <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
-                        <h5 class="card-title">Alça Camiseta</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
-                        <h5 class="card-title">Alça Fita</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </main>
-
 
 <footer>
     <div class="container text-center">
@@ -133,5 +115,6 @@
         </div>
     </div>
 </footer>
+
 </body>
 </html>
