--- a/src/main/resources/templates/AlcaFitaOrcamento.html
+++ b/src/main/resources/templates/AlcaFitaOrcamento.html
@@ -5,10 +5,11 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Orçamento Boca Vazada Fosco</title>
     <link rel="stylesheet" href="style.css">
+    <title>Litoral Brindes</title>
 </head>
 <body>
+
 <header class="cabecalho">
 
     <div class="container-fluid">
@@ -18,13 +19,13 @@
             </div>
             <div class="col-sm-8 col lg-8">
                 <nav class="ancora">
-                        <a href="/SacolasPlasticas">
-                            <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
-                        </a>
-                        <a href="SacolasPapel.html">
-                            <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
-                        </a>
-                        <button type="button" class="btn btn-outline-warning">Contatos</button>
+                    <a href="/SacolasPlasticas">
+                        <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
+                    </a>
+                    <a href="SacolasPapel.html">
+                        <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
+                    </a>
+                    <button type="button" class="btn btn-outline-warning">Contatos</button>
                 </nav>
             </div>
         </div>
@@ -44,89 +45,128 @@
         <caption class="tabela-titulo">Tabela de Sacolas</caption>
         <thead class="tabela-head">
         <tr class="tabela-subtitulo">
-            <th colspan="3">Sacolas Boca Vazada (HD) Alta Densidade (Fosca)</th>
+            <th colspan="4">Sacolas Alça Fita (HD) Alta Densidade (Fosco)</th>
         </tr>
         <tr>
             <th>Tamanho das Sacolas</th>
+            <th>Tamanho</th>
             <th>Valor das 500 Sacolas</th>
             <th>Valor das 1000 Sacolas</th>
         </tr>
         </thead>
         <tbody>
         <tr class="linha1">
-            <td>16 X 22 X 0,10</td>
-            <td>R$ -</td>
-            <td>R$ 315,00</td>
+            <td>30 X 45 X 0,15</td>
+            <td>P</td>
+            <td>R$ 650,00</td>
+            <td>R$ 1.150,00</td>
         </tr>
         <tr class="linha2">
-            <td>20 X 30 X 0,8</td>
-            <td>R$ -</td>
-            <td>R$ 380,00</td>
+            <td>40 X 50 X 0,15</td>
+            <td>M</td>
+            <td>R$ 825,00</td>
+            <td>R$ 1.500,00</td>
         </tr>
         <tr class="linha3">
-            <td>25 X 35 X 0,85</td>
-            <td>R$ -</td>
-            <td>R$ 425,00</td>
+            <td>45 X 55 X 0,15</td>
+            <td>G</td>
+            <td>R$ 960,00</td>
+            <td>R$ 1.750,00</td>
         </tr>
-        <tr class="linha4">
-            <td>30 X 40 X 0,8</td>
-            <td>R$ 350,00</td>
-            <td>R$ 625,00</td>
-        </tr>
-        <tr class="linha5">
-            <td>36 X 48 X 0,8</td>
-            <td>R$ 425,00</td>
-            <td>R$ 745,00</td>
-        </tr>
+        </tbody>
+    </table>
+    <table class="tabela-max2">
+        <thead class="tabela-cor">
         <tr>
-            <td colspan="3" class="empty">.</td>
-        </tr>
-        <thead>
-        <tr>
-            <th colspan="2" class="tabela-subtitulo-cor">Cores Disponiveis:</th>
-            <th class="tabela-subtitulo-cor">Tamanho 16 X 22 Somente:</th>
+            <th colspan="2">Cores Disponiveis:</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <td>Prata</td>
-            <td>Amarelo</td>
-            <td>Rosa Bebê</td>
+            <td>Marrom</td>
         </tr>
         <tr>
             <td>Ouro</td>
-            <td>Verde Claro</td>
+            <td>Amarelo</td>
+        </tr>
+        <tr>
+            <td>Azul</td>
             <td>Rosa</td>
         </tr>
         <tr>
             <td>Roxo</td>
-            <td>Verde Bandeira</td>
-            <td>Vermelho</td>
-        </tr>
-        <tr>
-            <td>Lilás</td>
             <td>Rosa Bebê</td>
-            <td>Azul</td>
         </tr>
         <tr>
-            <td>Azul Bebê</td>
-            <td>Rosa</td>
-            <td>Marrom</td>
-        </tr>
-        <tr>
-            <td>Azul</td>
-            <td>Marrom</td>
+            <td> Lilás</td>
+            <td>Transparente</td>
         </tr>
         <tr>
             <td>Vermelho</td>
-            <td>Vinho</td>
+            <td>Branco</td>
         </tr>
         <tr>
             <td>Laranja</td>
+            <td>Preto</td>
+        </tr>
+        <tr>
+            <td>Verde Limão</td>
+            <td>Verde Claro</td>
         </tr>
         </tbody>
     </table>
 
+
+    <table class="tabela-max1">
+    <th colspan="4">Sacolas Alça Fita (HD) Alta Densidade (Brilho)</th>
+    </tr>
+    <tr>
+        <th>Tamanho das Sacolas</th>
+        <th>Tamanho</th>
+        <th>Valor das 500 Sacolas</th>
+        <th>Valor das 1000 Sacolas</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="linha1">
+        <td>30 X 45 X 0,15</td>
+        <td>P</td>
+        <td>R$ 725,00</td>
+        <td>R$ 1.250,00</td>
+    </tr>
+    <tr class="linha2">
+        <td>40 X 50 X 0,15</td>
+        <td>M</td>
+        <td>R$ 865,00</td>
+        <td>R$ 1.625,00</td>
+    </tr>
+    <tr class="linha3">
+        <td>45 X 55 X 0,15</td>
+        <td>G</td>
+        <td>R$ 1.025,00</td>
+        <td>R$ 1.900,00</td>
+    </tr>
+    </tbody>
+    </table>
+    </table>
+    <table class="tabela-max2">
+        <thead class="tabela-cor">
+        <tr>
+            <th colspan="2">Cores Disponiveis:</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Prata</td>
+            <td>Branco</td>
+        </tr>
+        <tr>
+            <td>Preto</td>
+            <td>Amarelo</td>
+        </tr>
+        </tbody>
+    </table>
 
 </main>
 
