--- a/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
+++ b/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
@@ -5,10 +5,11 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Orçamento Boca Vazada Fosco</title>
+    <title>Orçamento Boca Vazada Brilho</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header class="cabecalho">
 
     <div class="container-fluid">
@@ -18,13 +19,13 @@
             </div>
             <div class="col-sm-8 col lg-8">
                 <nav class="ancora">
-                        <a href="/SacolasPlasticas">
-                            <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
-                        </a>
-                        <a href="SacolasPapel.html">
-                            <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
-                        </a>
-                        <button type="button" class="btn btn-outline-warning">Contatos</button>
+                    <a href="/SacolasPlasticas">
+                        <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
+                    </a>
+                    <a href="SacolasPapel.html">
+                        <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
+                    </a>
+                    <button type="button" class="btn btn-outline-warning">Contatos</button>
                 </nav>
             </div>
         </div>
@@ -54,79 +55,128 @@
         </thead>
         <tbody>
         <tr class="linha1">
-            <td>16 X 22 X 0,10</td>
+            <td>16 X 20 X 0,10</td>
             <td>R$ -</td>
-            <td>R$ 315,00</td>
+            <td>R$ 425,00</td>
         </tr>
         <tr class="linha2">
-            <td>20 X 30 X 0,8</td>
+            <td>20 X 30 X 0,10</td>
             <td>R$ -</td>
-            <td>R$ 380,00</td>
+            <td>R$ 465,00</td>
         </tr>
         <tr class="linha3">
-            <td>25 X 35 X 0,85</td>
-            <td>R$ -</td>
-            <td>R$ 425,00</td>
+            <td>25 X 35 X 0,11</td>
+            <td>R$ 350,00</td>
+            <td>R$ 585,00</td>
         </tr>
         <tr class="linha4">
-            <td>30 X 40 X 0,8</td>
-            <td>R$ 350,00</td>
-            <td>R$ 625,00</td>
+            <td>30 X 40 X 0,12</td>
+            <td>R$ 400,00</td>
+            <td>R$ 765,00</td>
         </tr>
         <tr class="linha5">
-            <td>36 X 48 X 0,8</td>
-            <td>R$ 425,00</td>
-            <td>R$ 745,00</td>
+            <td>36 X 48 X 0,12</td>
+            <td>R$ 465,00</td>
+            <td>R$ 865,00</td>
         </tr>
         <tr>
-            <td colspan="3" class="empty">.</td>
+            <td>40 X 50 X 0,12</td>
+            <td>R$ 550,00</td>
+            <td>R$ 985,00</td>
         </tr>
+        <tr>
+            <td>45 X 60 X 0,12</td>
+            <td>R$ 750,00</td>
+            <td>R$ 1.250,00</td>
+        </tr>
+        <!--        <tr>-->
+        <!--            <td colspan="3" class="empty">.</td>-->
+        <!--        </tr>-->
+    </table>
+    <table class="tabela-max2">
+        <div id="centraliza-CoresDisponiveis">
+            <thead class="tabela-cor">
+            <tr>
+                <th colspan="2" class="tabela-subtitulo-cor">Cores Disponiveis:</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Prata</td>
+                <td>Rosa</td>
+            </tr>
+            <tr>
+                <td>Ouro</td>
+                <td>Rosa Bebê</td>
+            </tr>
+            <tr>
+                <td>Roxo</td>
+                <td>Creme</td>
+            </tr>
+            <tr>
+                <td>Azul</td>
+                <td>Transparente</td>
+            </tr>
+            <tr>
+                <td>Azul Bebê</td>
+                <td>Vinho</td>
+            </tr>
+            <tr>
+                <td>Vermelho</td>
+                <td>Preto</td>
+            </tr>
+            <tr>
+                <td>Laranja</td>
+                <td>Branco</td>
+            </tr>
+            <tr>
+                <td>Verde Claro</td>
+                <td>Amarelo</td>
+            </tr>
+            <tr>
+                <td>Verde Bandeira</td>
+            </tr>
+            </tbody>
+        </div>
+
+    </table>
+    <table class="tabela-max3">
         <thead>
         <tr>
-            <th colspan="2" class="tabela-subtitulo-cor">Cores Disponiveis:</th>
-            <th class="tabela-subtitulo-cor">Tamanho 16 X 22 Somente:</th>
+            <th colspan="2">Tamanho 16 X 20 Somente:</th>
+            <th>45 X 60 Somente:</th>
         </tr>
         </thead>
         <tbody>
         <tr>
+            <td>Branco</td>
             <td>Prata</td>
+            <td>Branco</td>
+        </tr>
+        <tr>
+            <td>Preto</td>
+            <td>Laranja</td>
+            <td>Preto</td>
+        </tr>
+        <tr>
             <td>Amarelo</td>
+            <td>Verde Limão</td>
+        </tr>
+        <tr>
+            <td>Azul</td>
+            <td>Roxo</td>
+        </tr>
+        <tr>
+            <td>Vermelho</td>
             <td>Rosa Bebê</td>
         </tr>
         <tr>
             <td>Ouro</td>
-            <td>Verde Claro</td>
-            <td>Rosa</td>
-        </tr>
-        <tr>
-            <td>Roxo</td>
-            <td>Verde Bandeira</td>
-            <td>Vermelho</td>
-        </tr>
-        <tr>
-            <td>Lilás</td>
-            <td>Rosa Bebê</td>
-            <td>Azul</td>
-        </tr>
-        <tr>
             <td>Azul Bebê</td>
-            <td>Rosa</td>
-            <td>Marrom</td>
-        </tr>
-        <tr>
-            <td>Azul</td>
-            <td>Marrom</td>
-        </tr>
-        <tr>
-            <td>Vermelho</td>
-            <td>Vinho</td>
-        </tr>
-        <tr>
-            <td>Laranja</td>
         </tr>
         </tbody>
-    </table>
 
+    </table>
 
 </main>
 
@@ -168,6 +218,7 @@
         </div>
     </div>
 </footer>
+
 
 </body>
 </html>
