--- a/src/main/resources/templates/SacolasPlasticas.html
+++ b/src/main/resources/templates/SacolasPlasticas.html
@@ -19,13 +19,13 @@
             </div>
             <div class="col-sm-8 col lg-8">
                 <nav class="ancora">
-                    <nav href="SacolasPlasticas.html">
-                        <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
+                        <a href="/SacolasPlasticas">
+                            <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
+                        </a>
                         <a href="SacolasPapel.html">
                             <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                         </a>
                         <button type="button" class="btn btn-outline-warning">Contatos</button>
-                    </nav>
                 </nav>
             </div>
         </div>
@@ -48,7 +48,7 @@
                     <div class="card-body">
                         <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Boca Vazada Fosca </h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">A "alça vazada" refere-se a um corte na parte superior da sacola, que funciona como uma alça embutida para facilitar o transporte. E o acabamento fosco é aquele sem brilho</p>
                         <a href="/bocaVazadaFoscaOrcamento" class="btn btn-primary">Veja Orçamento</a>
                     </div>
                 </div>
@@ -58,8 +58,8 @@
                     <div class="card-body">
                         <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Boca Vazada Brilho</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
+                        <p class="card-text">Com acabamento brilhante, que dá um visual mais chamativo. A alça é aquele recorte na parte de cima para segurar a sacola. Normalmente, ela é usada quando se quer algo com um toque mais sofisticado.</p>
+                        <a href="/BocaVazadaBrilhoOrcamento" class="btn btn-primary">Veja Orçamento</a>
                     </div>
                 </div>
             </div>
@@ -74,8 +74,8 @@
                     <div class="card-body">
                         <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Alça Camiseta</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
+                        <p class="card-text">A sacola alça camiseta é aquele modelo clássico que tem duas alças parecidas com as de uma camiseta. É muito usada em supermercados e lojas, porque é prática e pode carregar bastante coisa.</p>
+                        <a href="/AlcaCamisetaOrcamento" class="btn btn-primary">Veja Orçamento</a>
                     </div>
                 </div>
             </div>
@@ -84,8 +84,8 @@
                     <div class="card-body">
                         <img th:src="@{/imagens/alca-vazada.jpg}" class="imagem-card" alt="imagem card">
                         <h5 class="card-title">Alça Fita</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Veja Orçamento</a>
+                        <p class="card-text">Com alças fixadas na parte superior da sacola que dão um toque mais elegante e confortável para carrega-la. Esse tipo de sacola é bastante usado em lojas de roupas, presentes ou produtos mais sofisticados, porque além de funcional, ela passa uma imagem de capricho.</p>
+                        <a href="/AlcaFitaOrcamento" class="btn btn-primary">Veja Orçamento</a>
                     </div>
                 </div>
             </div>
