--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -100,13 +100,27 @@ body {
     font-size: 20px;
 }
 
-.btn-primary {
+.botao-voltar{
+    margin-left: 85%;
+
+
+}
+
+.btn-back {
+    margin-top: 2%;
+    width: 100px;
+    height: 40px;
+}
+
+.btn-back:hover{
+    text-decoration: none;
 }
 
 
 footer {
     background-color: black;
     color: white;
+    margin-top: 3%;
     /*padding: 5vh;*/
 }
 
@@ -164,6 +178,11 @@ footer {
         border-top: solid white 1px;
         margin-top: 5%;
         padding-top: 5%;
+    }
+
+    .botao-voltar{
+        margin-right: auto;
+        margin-left: auto;
     }
 }
 
