--- a/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
+++ b/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
@@ -178,6 +178,10 @@
 
     </table>
 
+    <a href="/SacolasPlasticas" class="botao-voltar">
+        <button type="button" class="btn btn-outline-warning btn-back">Voltar</button>
+    </a>
+
 </main>
 
 <footer>
