--- a/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
+++ b/src/main/resources/templates/bocaVazadaFoscaOrcamento.html
@@ -127,6 +127,9 @@
         </tbody>
     </table>
 
+    <a href="/SacolasPlasticas" class="botao-voltar">
+        <button type="button" class="btn btn-outline-warning btn-back">Voltar</button>
+    </a>
 
 </main>
 
