--- a/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
+++ b/src/main/resources/templates/BocaVazadaBrilhoOrcamento.html
@@ -22,7 +22,7 @@
                     <a href="/SacolasPlasticas">
                         <button type="button" class="btn btn-outline-warning">Sacolas Plásticas</button>
                     </a>
-                    <a href="SacolasPapel.html">
+                    <a href="/SacolasPapelOrcamento">
                         <button type="button" class="btn btn-outline-warning">Sacolas de Papel</button>
                     </a>
                     <button type="button" class="btn btn-outline-warning">Contatos</button>
