--- a/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
+++ b/src/main/resources/templates/SacolasPapelOrcamentoFinal.html
@@ -9,6 +9,7 @@
 <!--    <p th:text="${tamanhoSacolas"> </p>-->
 <!--</div>-->
 <p>oi</p>
-<p th:text="${tamanhoSacolas}"></p>
+<!--<p th:text="${tamanhoSacolas}"></p>-->
+<p th:text="${resultadoOrcamento}"></p>
 </body>
 </html>
