--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -24,6 +24,7 @@
 
 body {
     box-sizing: border-box;
+    color: black;
     background-color: var(--cor-fundo);
     font-family: Arial;
 }
@@ -282,6 +283,31 @@ table th, table td {
     font-family: "Oswald", sans-serif;
     color: white;
 }
+
+
+ /* FORMULÁRIO */
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    width: 40%;
+    margin-left: 25%;
+    border-radius: 2%;
+    text-align: center;
+}
+
+.formulario-caixa {
+    text-align: left;
+    margin-left: 5%;
+}
+
+.formulario-botao {
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
 
 
 
